# haskell-tic-tac-toe

./: stack.yaml  ttt.cabal
app/: Main.hs
src/Game/: AI.hs  Ai.hs  Board.hs  Console.hs  Constants.hs  GameRunner.hs  Rules.hs
test/Data/String/: StripSpec.hs
test/Game/: AiSpec.hs  BoardSpec.hs  RulesSpec.hs
