name:                ttt
version:             0.1.0.0
synopsis:            Simple Tic Tac Toe Game
description:         Please see README.md
homepage:            https://github.com/githubuser/ttt#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Zures
maintainer:          example@example.com
copyright:           2016 Andrew Zures
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.Rules
                     , Game.Board
                     , Game.Constants
                     , Game.Ai
                     , Game.GameRunner
  build-depends:       base >= 4.7 && < 5
                      , matrix
                      , vector
  default-language:    Haskell2010

executable ttt
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ttt
  default-language:    Haskell2010

test-suite ttt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ttt
                     , hspec
                     , QuickCheck
                     , matrix
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ttt
